# power-manager

./: .gitignore  AUTHORS  NEWS  README.md  autogen.sh  configure.ac.in
common/: Makefile.am  espm-brightness.c  espm-brightness.h  espm-common.c  espm-common.h  espm-config.h  espm-debug.c  espm-debug.h  espm-enum-glib.h  espm-enum.h  espm-icons.h  espm-power-common.c  espm-power-common.h
data/appdata/: Makefile.am  expidus1-power-manager.appdata.xml.in
data/icons/128x128/: Makefile.am
data/icons/16x16/: Makefile.am
data/icons/24x24/: Makefile.am
data/icons/32x32/: Makefile.am
data/icons/48x48/: Makefile.am
data/icons/scalable/: Makefile.am
data/interfaces/: Makefile.am  espm-settings.ui
libdbus/: Makefile.am  espm-dbus-monitor.c  espm-dbus-monitor.h  espm-dbus.c  espm-dbus.h
panel-plugins/power-manager-plugin/: Makefile.am  power-manager-button.c  power-manager-button.h  scalemenuitem.c  scalemenuitem.h
panel-plugins/power-manager-plugin/expidus/: Makefile.am  expidus-power-manager-plugin.c  power-manager-plugin.desktop.in.in
po/: POTFILES.in  ar.po  ast.po  be.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en_AU.po  en_CA.po  en_GB.po  es.po  et.po  eu.po  fi.po  fr.po  gl.po  he.po  hr.po  hu.po  hy_AM.po  hye.po  id.po  ie.po  is.po  it.po  ja.po  kk.po  kn.po  ko.po  lt.po  ms.po  nb.po  nl.po  nn.po  oc.po  pa.po  pl.po  (+20 more)
settings/: Makefile.am  espm-settings-app.c  espm-settings-app.h  espm-settings-main.c  espm-settings.c  espm-settings.h  expidus1-power-manager-settings.1  expidus1-power-manager-settings.desktop.in
src/: Makefile.am  com.expidus.Power.Manager.xml  com.expidus.power.policy.in2  espm-backlight-helper.c  espm-backlight.c  espm-backlight.h  espm-battery.c  espm-battery.h  espm-button.c  espm-button.h  espm-console-kit.c  espm-console-kit.h  espm-dpms.c  espm-dpms.h  espm-errors.c  espm-errors.h  espm-inhibit.c  espm-inhibit.h  espm-kbd-backlight.c  espm-kbd-backlight.h  espm-main.c  espm-manager.c  espm-manager.h  espm-network-manager.c  espm-network-manager.h  espm-notify.c  espm-notify.h  espm-pm-helper.c  espm-polkit.c  espm-polkit.h  espm-power.c  espm-power.h  espm-suspend.c  espm-suspend.h  espm-systemd.c  espm-systemd.h  espm-xfconf.c  espm-xfconf.h  expidus-screensaver.c  expidus-screensaver.h  (+2 more)
